--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="password">Password</string>
     <string name="create_an_account">Create an Account</string>
     <string name="login">Login</string>
+    <string name="bar_graph_img">Bar graph img</string>
+    <string name="dollar_sign_img">Dollar Sign img</string>
+    <string name="pie_chart_img">Pie Chart img</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
